--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,12 +15,12 @@ jobs:
               uses: actions/checkout@v4
               with:
                 ref: main
-            - name: list 1 all the branches 
-              run: git branch --list 
             - name: git fetch branches
               run: git fetch
-            - name: list 2 all the branches
-              run: git branch --list 
             - name: checkout to dev
               run: git checkout dev
+            - name: setup docker
+              uses: docker/setup-buildx-action@v3
+            - name: build docker image
+              run: docker build -t test:latest .  
 
