--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,10 +15,8 @@ jobs:
               uses: actions/checkout@v4
               with:
                 ref: main
-            - name: git fetch branches
-              run: git fetch
             - name: checkout to dev
-              run: git checkout dev
+              run: git checkout dev -- Dockerfile
             - name: setup docker
               uses: docker/setup-buildx-action@v3
             - name: build docker image
